--- a/app/views/tickets/edit.html.erb
+++ b/app/views/tickets/edit.html.erb
@@ -1,11 +1,11 @@
-<h1>Изменить поезд</h1>
+<h1>Изменить билет</h1>
 
-<%= form_for(@train) do |f| %>
-    <% if @train.errors.any? %>
+<%= form_for(@ticket) do |f| %>
+    <% if @ticket.errors.any? %>
         <div id="error_explanation">
-          <h2><% pluralize(@train.errors.count, "error") %> Ошибка! </h2>
+          <h2><% pluralize(@ticket.errors.count, "error") %> Ошибка! </h2>
           <ul>
-            <% @train.errors.full_messages.each do |message| %>
+            <% @ticket.errors.full_messages.each do |message| %>
                 <li><%= message %> </li>
             <% end %>
           </ul>
@@ -22,4 +22,4 @@
 
 <% end %>
 
-<%= link_to 'Назад', trains_path %>
+<%= link_to 'Назад', tickets_path %>
