--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -5,5 +5,16 @@
   <%= @route.title %>
 </p>
 
+<% if @route.trains.empty? %>
+    <p> Маршрут не назначен</p>
+<% else %>
+    <p>Список поездов</p>
+    <ul>
+      <% @route.trains.each do |train|%>
+          <li> <%= train.number %> </li>
+      <% end %>
+    </ul>
+<% end %>
+
 <%= link_to 'Редактировать', edit_route_path(@route) %>
 <%= link_to 'Назад', routes_path %>
