--- a/app/views/railway_stations/show.html.erb
+++ b/app/views/railway_stations/show.html.erb
@@ -5,5 +5,17 @@
   <%= @railway_station.title %>
 </p>
 
+<% if @railway_station.routes.empty? %>
+    <p>Станция не входит не в один маршрут</p>
+<% else %>
+    <p>Станция входит в следующие маршруты:</p>
+    <ul>
+      <% @railway_station.routes.each do |route|%>
+        <li> <%= route.title %> </li>
+      <% end %>
+    </ul>
+<% end %>
+
+
 <%= link_to 'Редактировать', edit_railway_station_path(@railway_station) %>
 <%= link_to 'Назад', railway_stations_path %>
